volexc/tests/ui/service_undefined_request.vol
// Undefined request type in service

message Response {}

service Foo {
    fn bar(UndefinedRequest) -> Response = 1;
}
